--- a/src/experiments.ipynb
+++ b/src/experiments.ipynb
@@ -2,96 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class KerasTorchStyleNet(tf.keras.Model):\n",
-    "    def __init__(self,layer_width):\n",
-    "        super().__init__()\n",
-    "        self.linear1 = tf.keras.layers.Dense(units = layer_width, activation='relu')\n",
-    "        self.linear2 = tf.keras.layers.Dense(units = 1, activation = None)\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "    def call(self,x):\n",
-    "        return self.linear2(self.linear1(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+    "from model import VGGEncoder, VGGDecoder"
+   ],
    "outputs": [],
-   "source": [
-    "model = KerasTorchStyleNet(10)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = tf.linspace(-1.75, 1.75, 1000)\n",
-    "x = x[:,tf.newaxis]\n",
-    "\n",
-    "def f(x):\n",
-    "    return - tf.math.cos(x) - 2.5 * tf.math.cos(3*x) + 0.5 * tf.math.sin(2*x)\n",
-    "\n",
-    "y = f(x) + tf.random.normal(x.shape) # ground truth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layer_width = 64\n",
-    "inputs = tf.keras.layers.Input(shape = (1,))\n",
-    "h = tf.keras.layers.Dense(units=layer_width, activation='relu')(inputs)\n",
-    "outputs = tf.keras.layers.Dense(units=1,activation=None)(h)\n",
-    "\n",
-    "model = tf.keras.Model(inputs = inputs, outputs= {'output_1' : outputs})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 1,
+   "source": [],
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'output_1': <tf.Tensor 'dense_5/Identity:0' shape=(None, 1) dtype=float32>}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/scratch/230926684.tmpdir/ipykernel_68558/1001610123.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcifar10\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mx_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_train\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m255.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_test\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m255.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [
-    "model.output"
-   ]
+    "\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "6428c71344d18f3e37e388ea5717ee401b4180cf156c6d3bf9d292527beb9c57"
+   "hash": "a0a8a6d8e96a42e5533009816f6fe14f2b8f2457678c2837efe3f5c63027a54a"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('semester_project': venv)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('semester_project_env': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -103,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
